--- a/static/templates/index_demo.html
+++ b/static/templates/index_demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>开源免费客服系统-极简强大Go语言开发客服单页营销系统 - GOFLY</title>
+    <title>客服系统</title>
 	<style>
 	body{color: #333;padding-left: 40px;}h1{font-size: 6em;}h2{font-size: 3em;font-weight: normal;}a{color: #333;}
 	</style>
