--- a/static/templates/index_new.html
+++ b/static/templates/index_new.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>开源免费客服系统-极简强大Golang语言开发在线客服单页营销系统 - GOFLY</title>
-    <meta name="keywords" content="GO-FLY,GOFLY客服,开源免费在线客服,GO语言客服,免费客服,开源客服,web客服,go客服,网站客服系统,免费在线客服,网站在线客服,在线客服软件,php客服" />
-    <meta name="description" content="GOFLY客服,GO-FLY开源客服，一套可独立部署的免费开源客服系统，网站在线客服系统，下载zip解压即可，仅依赖MySQL数据库，是一个开箱即用的网页在线客服，适合PHP程序员使用，同时也是首页完全可以编辑的单页营销系统." />
+    <title>在线客服</title>
+    <meta name="keywords" content="网站在线客服" />
+    <meta name="description" content="客服." />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <script>
         var _hmt = _hmt || [];
@@ -26,14 +26,14 @@
         GOFLY_URL:"https://jd.sopans.com",
         GOFLY_KEFU_ID: "taoshihan",
         GOFLY_ENT: "5",
-        GOFLY_BTN_TEXT: "GOFLY在线客服!",
+        GOFLY_BTN_TEXT: "在线客服!",
         GOFLY_LANG:"cn",
     })
 </script>
 <!--//对接客服代码-->
 <div class="header">
     <div class="container">
-        <h1 class="logo"><a href="/"><img src="/static/images/logo.png" alt="GOFLY客服" title="GOFLY客服"/></a></h1>
+        <h1 class="logo"><a href="/"><img src="/static/images/logo.png" alt="客服" title="客服"/></a></h1>
         <a class="navBtn" href="/index_en">English</a>
         <a class="navBtn" href="/index_cn">中文版</a>
 
@@ -45,42 +45,23 @@
 </div>
 <div class="clear"></div>
 <div class="banner">
-    <h1>开源 · 免费 · 网页在线客服营销系统</h1>
-    <p>GO-FLY，一套可独立部署的免费开源客服系统，基于Golang开发，编译后的二进制文件可直接使用无需搭开发环境，下载zip解压即可，仅依赖MySQL数据库，是一个开箱即用的网页在线客服系统，同时也是首页完全可以编辑的单页营销系统</p>
-    <p><a target="_blank" href="https://github.com/taoshihan1991/go-fly" class="downloadBtn">GOFLY (Github开源)</a>
-        <a target="_blank" href="https://dwz.cn/XFf8o2ym" class="downloadBtn">下载 GOFLY0.3.7 (单商户编译版)</a>
-        <a target="_blank" href="https://dwz.cn/q9Kfrunc" class="downloadBtn">下载 GOFLY-PRO0.3.8 (商务版)</a>
+    <h1>网页在线客服营销系统</h1>
+    <p>GO-FLY，一套可独立部署的客服系统</p>
     </p>
 
 </div>
 <div class="main">
-    <img alt="GOFLY在线客服"  title="GOFLY在线客服" class="jumbotron" src="https://gofly.sopans.com/static/images/admin.jpg"/>
+    <img alt="在线客服"  title="在线客服" class="jumbotron" src="/static/images/admin.jpg"/>
     <div class="container mainIntro">
-        <div class="product">
-            <h3>产品优势</h3>
-            <div class="productContent">
-                <p>1.使用PHP客服或者JAVA客服时，需要安装各种扩展和依赖，配置运行环境复杂，安装过程耗费心力。市面上大部分客服系统，无法在windows系统运行，不能做到跨平台部署。</p>
-                <p>2.gofly客服安装仅需要下载解压安装包，仅依赖MySQL数据库，就能够快速部署，界面简洁功能完善。</p>
-                <p>3.gofly客服是golang语言开发，天然支持异步协程，可以利用多核CPU，支持更大流量更高并发。程序可编译后运行，无需像PHP每次解释执行，执行效率更高，</p>
-            </div>
-            <h4>问：新版编译下载为何收费？</h4>
-            <div class="productContent">
-                <p>答：</p>
-                <p>1. 代码完全开源免费，托管在github上，可以随时clone/fork</p>
-                <p>2. 每次build打包上传，需要花费一定的时间比较繁琐</p>
-                <p>3. 使用编译版的用户，在安装和使用时可以随时咨询开发者</p>
-                <p>4. 老用户可联系我微信，单独发送给你，联系方式<a href="javascript:GOFLY.showPanel();">在线客服</a>自助获取.</p>
-            </div>
-        </div>
         <div class="product">
             <h3>安装使用</h3>
             <h4>访客端js引入使用</h4>
             <div class="productContent">
                 <p>1.引入js并且修改为自己的域名</p>
                 <pre>
-    script标签引入这段js https://gofly.sopans.com/assets/js/gofly-front.js
+    script标签引入这段js /assets/js/gofly-front.js
     GOFLY.init({
-        GOFLY_URL:"https://gofly.sopans.com",
+        GOFLY_URL:"",
         GOFLY_KEFU_ID: "kefu2",//对接的客服name
     })
                 </pre>
@@ -88,7 +69,7 @@
                 <pre>
 
     GOFLY.init({
-        GOFLY_URL:"https://gofly.sopans.com",
+        GOFLY_URL:"",
         GOFLY_KEFU_ID: "kefu2",//对接的客服name
         GOFLY_WITHOUT_BTN:true,
     })
@@ -210,37 +191,13 @@
     </div>
     <div class="container mainIntro">
         <div class="product">
-            <h3>友情链接</h3>
-            <div class="productContent">
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">网站客服系统</a>
-                <a href="https://gofly.sopans.com/"  target="_blank">免费在线客服</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">网站在线客服</a>
-                <a href="https://gofly.sopans.com/" target="_blank">在线客服软件</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">网站在线客服系统</a>
-                <a href="https://gofly.sopans.com/" target="_blank">网站客服软件</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">网页客服</a>
-                <a href="https://gofly.sopans.com/" target="_blank">在线客服源码</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">网页在线客服代码</a>
-                <a href="https://gofly.sopans.com/" target="_blank">在线咨询系统</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">免费客服系统</a>
-                <a href="https://gofly.sopans.com/" target="_blank">网上客服软件</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">开源客服软件</a>
-                <a href="https://gofly.sopans.com/" target="_blank">在线客服程序</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">免费在线客服系统</a>
-                <a href="https://gofly.sopans.com/" target="_blank">网站客服系统代码</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">在线客服系统源代码</a>
-                <a href="https://gofly.sopans.com/" target="_blank">网页在线客服</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">免费网站客服</a>
-                <a href="https://gofly.sopans.com/" target="_blank">在线客服系统源码</a>
-                <a href="https://gofly.sopans.com/chatIndex" target="_blank">免费在线客服软件</a>
-            </div>
         </div>
     </div>
 </div>
 <div class="container">
     <div class="footer">
         <div class="copyright">
-            Copyright sopans.com Rights Reserved.  Powered By <a  href="https://gofly.sopans.com">陶士涵</a> 版权所有<a  href="javascript:GOFLY.showPanel();">联系客服</a>© 2020-2021
+            Copyright sopans.com Rights Reserved.  Powered By <a  href="">xx</a> 版权所有<a  href="javascript:GOFLY.showPanel();">联系客服</a>© 2020-2021
         </div>
     </div>
 </div>
