--- a/static/templates/install.html
+++ b/static/templates/install.html
@@ -4,8 +4,8 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
-    <meta name="author" content="陶士涵">
-    <title>GOFLY客服系统安装页面</title>
+    <meta name="author" content="xx">
+    <title>客服系统安装页面</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.1/lib/theme-chalk/index.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/element-ui@2.13.1/lib/index.js"></script>
@@ -87,7 +87,7 @@
             </el-form>
             <div class="clear"></div>
         </div>
-        <p class="copyright">陶士涵版权所有 &copy; 2020-2021 </p>
+        <p class="copyright">xx版权所有 &copy; 2020-2021 </p>
 </template>
 </div>
 </body>
