--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
     <meta name="description" content="">
-    <meta name="author" content="陶士涵">
-    <title>GO语言开源客服系统-GOFLY</title>
+    <meta name="author" content="xx">
+    <title>客服系统</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.15.1/theme-chalk/index.min.css">
     <script src="https://cdn.staticfile.org/vue/2.6.9/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
